Fixed mobile formatting

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -49,10 +49,11 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="content center" style="text-align: center; height: 100vh;">
+		<div class="content center" style="text-align: center; height: 100dvh;">
 			<div class="headers" style="margin: auto 0;">
 				<h1 class="grotesk-head-2">404</h1>
 				<h1 class="grotesk-head" style="font-size: 5em;">PAGE NOT FOUND</h1>
+				<a href="/" class="dm-foot" style="color: gray;">go back home</a>
 			</div>
 		</div>
 		<KFooter page=`${pageTitle}` color="#1b1b1b" />
