--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -51,7 +51,7 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="center" style="align-items: center; display: flex; flex-direction: column; gap: 10em; margin: 5em 2em;">
+		<div class="content center" style="max-width: 80ch; margin: auto 0px; padding: 50px; gap: 10em;">
 			<div class="vstack title" style="text-align: center;">
 				<h1 style="font-size: 5em; text-align: center;"><a href="/" class="grotesk-head">The Kyanet</a></h1>
 				<span class="dm-foot" style="color: gray; font-weight: 500;">私について知っておくべきこと</span>
