--- a/src/special/template.astro
+++ b/src/special/template.astro
@@ -51,7 +51,7 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="content" style="text-align: center; max-width: 80ch;">
+		<div class="content center" style="text-align: center; max-width: 80ch; margin-top: 50px; padding: 50px;">
 			<h1>The Kyanet Page</h1>
 			<h2>Why we follow this guide</h2>
 			<p>Every page will follow this specific design guideline. We have a few reasons for that actually.  One of which is SEO (Search-Engine-Optimization). Shit's not easy, yo. We want to have all of our pages to have at least a little bit of effort put in - so here's what we do for that:</p>
