--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background-color: #1b1b1b;">
-		<div class="content center" style="text-align: center; height: 100vh; display: flex; flex-direction: column; justify-content: space-between; max-width: 80ch;">
+		<div class="content center" style="text-align: center; max-width: 80ch; margin: auto 0px; padding: 50px;">
 			<div class="headers vstack" style="margin: auto 0; gap: 5em;">
 				<div class="vstack">
 					<span class="grotesk-head-2" style="font-size: 2.5em">Welcome to</span>
@@ -69,8 +69,8 @@ import "../styles/global.css";
 					</div>
 				</div>
 			</div>
+			<div class="spacer"></div>
 			<span class="dm-foot" style="color: gray;">"And without purpose, we are nothing. If you are nothing, your purpose is to find it."</span>
-			<div class="spacer" style="font-weight: 200;"></div>
 		</div>
 		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
