--- a/src/pages/skycord.astro
+++ b/src/pages/skycord.astro
@@ -53,18 +53,20 @@ import "../styles/global.css";
 		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
 	</head>
 	<body style="background: linear-gradient(-45deg, rgba(11,122,255,1), rgba(90,184,254,1)); background-repeat: no-repeat; background-attachment: fixed;">
-		<div class="content center" style="text-align: center; max-width: 80ch; width: 100%; margin-top: 50px; margin-bottom: 50px; padding: 50px; background-color: white; border-radius: 15px; box-shadow: 0px 0px 50px rgba(0, 0, 0, .25);">
+		<div class="spacer"></div>
+		<div class="content center" style="text-align: center; max-width: 80ch; margin: auto 1em; padding: 2em; background-color: white; border-radius: 15px; box-shadow: 0px 0px 50px rgba(0, 0, 0, .25); height: 100%">
             <img src="svg/Skycord.svg" alt="Discord logo Clyde with Bluesky's wings. The logo for Skycord with the text 'Skycord' underneath it." class="skycordlogo">
 			<div class="spacer"></div>
             <h1 style="color: black; font-weight: 500; font-size: xx-large">Announcements in your servers</h1>
 			<p style="color: black;">Skycord is an expert-coded Discord bot created for the sole purpose of announcing your new Bluesky posts in any channel you want.  Simply add the bot, and use the /connect command to subscribe to your account!</p>
-			<img src="img/skycord-example.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px;">
+			<img src="img/skycord-example.png" alt="Screenshot of a Discord embed posted by Skycord." style="border-radius: 10px; width: 100%; max-width: 500px;">
 			<div class="spacer"></div>
-			<div class="hstack">
+			<div class="hstack" style="width: 100%; justify-content: center;">
 				<a href="https://github.com/kyanoxia/skycord" style="background-color: #369cff; padding: 10px; border-radius: 7px; margin: 5px;">Get it on GitHub</a>
 				<a href="https://discord.com/oauth2/authorize?client_id=1297227452707373267" style="background-color: #369cff; padding: 10px; border-radius: 7px; margin: 5px;">Invite to Server</a>
 			</div>
 		</div>
+		<div class="spacer"></div>
 		<KFooter page=`${pageTitle}` color="white" />
 
         <script is:inline>
