--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,22 +27,25 @@ import "../styles/global.css";
 		<meta name="generator" content={Astro.generator} />
 		
 		<meta property="og:site_name" content="The Kyanet" />
-		<meta property="og:title" content=`${pageTitle}` />
-		<meta property="og:description" content=`${pageDescription}` />
-		<meta property="og:image" content=`${pageImage}` />
+		<meta property="og:title" content={pageTitle} />
+		<meta property="og:description" content={pageDescription} />
+		<meta property="og:image" content={pageImage} />
+		<meta property="og:url" content="https://kyanoxia.com/">
+
+		<meta property="description" content={pageDescription} />
 
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="The Kyanet" />
-		<meta name="twitter:title" content=`${pageTitle}` />
-		<meta name="twitter:description" content=`${pageDescription}` />
+		<meta name="twitter:title" content={pageTitle} />
+		<meta name="twitter:description" content={pageDescription} />
 		<meta name="twitter:url" content=`https://kyanoxia.com/`>
-		<meta name="twitter:image" content=`${pageImage}` />
+		<meta name="twitter:image" content={pageImage} />
 
-		<meta itemprop="name" content=`${pageTitle}` />
-		<meta itemprop="description" content=`${pageDescription}` />
-		<meta itemprop="image" content=`${pageImage}` />
+		<meta itemprop="name" content={pageTitle} />
+		<meta itemprop="description" content={pageDescription} />
+		<meta itemprop="image" content={pageImage} />
 
-		<meta name="theme-color" content=`${pageColor}` />
+		<meta name="theme-color" content={pageColor} />
 
 		<title>{pageTitle}</title>
 
