Fixing orchid references and adding Ko-Fi

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -73,7 +73,7 @@ import "../styles/global.css";
 				<ul class="description" style="margin-top: 0; color: #9c9c9c;">
 					<li>Yugen-Electron-Wrapper: A cross-platform Proof-of-Concept Electron wrapper for Yugen, integrated with AdBlock functionality, enhancing user experience by providing a seamless and ad-free environment.</li>
 					<div class="spacer"></div>
-					<li>Skycord: A powerful Discord bot to subscribe to BlueSky accounts and announce new posts in any given channel, promoting ease of use and community participation.</li>
+					<li>Orchid: A powerful Discord bot to subscribe to BlueSky accounts and announce new posts in any given channel, promoting ease of use and community participation.</li>
 				</ul>
 				<p class="description">These projects, among others, are showcased on her GitHub profile, reflecting her commitment to open-source development and community engagement.</p>
 				<span class="dm-foot" style="color: gray; font-weight: 500;">キャリアとプロジェクト</span>
