--- a/src/pages/card.astro
+++ b/src/pages/card.astro
@@ -96,6 +96,11 @@ import "../styles/global.css";
 				<p class="description">If you like my work and want to buy me a gift, you can do that here.</p>
 				<span class="dm-foot" style="color: gray; font-weight: 500;">あなたは私にひざまずくでしょう</span>
 			</a>
+			<a href="https://ko-fi.com/kyanoxia" class="vstack social" style="margin: auto 0; max-width: 80ch; text-align: left;">
+				<h2 class="grotesk-head-2" style="font-size: 2.5em">Ko-Fi</h2>
+				<p class="description">Donations are more than welcome.</p>
+				<span class="dm-foot" style="color: gray; font-weight: 500;">金銭を乞う</span>
+			</a>
 		</div>
 		<KFooter page=`${pageTitle}` color="#1b1b1b" />
 	</body>
