--- a/src/pages/join.astro
+++ b/src/pages/join.astro
@@ -28,6 +28,10 @@ const req = Astro.locals;
 		<meta itemprop="description" content=`${req.dscDesc}`>
 		<meta itemprop="image" content=`${req.dscImg}`>
 
+		<meta name="name" content=`${req.dscName}` />
+		<meta name="description" content=`${req.dscDesc}` />
+		<meta name="image" content=`${req.dscImg}` />
+
 		<meta name="theme-color" content=#D4CBE5 />
 		<title>Join Us</title>
 	</head>
