--- a/src/pages/orchid.astro
+++ b/src/pages/orchid.astro
@@ -2,7 +2,7 @@
 export const prerender = false;
 
 const pageTitle = "Orchid";
-const pageDescription = "Where Bluesky Meets Discord.  Gracefully bridge your community with huge customizability.";
+const pageDescription = "Where Bluesky Meets Discord. Use Orchid to racefully bridge your community with huge customizability, including post announcements, filters, and more.";
 const pageImage = "img/Logo.png";
 const pageColor = "#FF5E9A";
 
@@ -37,6 +37,10 @@ import provider from "../../public/img/orchid-provider.png";
 		<meta itemprop="name" content=`${pageTitle}` />
 		<meta itemprop="description" content=`${pageDescription}` />
 		<meta itemprop="image" content=`${pageImage}` />
+
+		<meta name="name" content=`${pageTitle}` />
+		<meta name="description" content=`${pageDescription}` />
+		<meta name="image" content=`${pageImage}` />
 
 		<meta name="theme-color" content=`${pageColor}` />
 
