--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,6 +42,10 @@ import "../styles/global.css";
 		<meta itemprop="description" content=`${pageDescription}` />
 		<meta itemprop="image" content=`${pageImage}` />
 
+		<meta name="name" content=`${pageTitle}` />
+		<meta name="description" content=`${pageDescription}` />
+		<meta name="image" content=`${pageImage}` />
+
 		<meta name="theme-color" content=`${pageColor}` />
 
 		<title>{pageTitle}</title>
