--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -61,7 +61,7 @@ import type { getDataEntryById } from 'astro:content';
 	<body style="background-color: #1b1b1b;">
 		<div class="vstack title" style="text-align: center;">
 			<span style="font-size: 5em; text-align: center;"><a href="/" class="grotesk-head" style="text-decoration: none; color: white;">The Kyanet</a></span>
-			<span class="dm-foot" style="color: gray; font-weight: 500;">私について知っておくべきこと</span>
+			<span class="dm-foot" style="color: gray; font-weight: 500;">私の冒険記録</span>
 		</div>
 		<div class="title vstack">
 			<h1>Blog</h1>
