--- a/src/pages/blog/[rkey].astro
+++ b/src/pages/blog/[rkey].astro
@@ -57,7 +57,7 @@ import "../../styles/blog.css";
 	<body style="background-color: #1b1b1b;">
 		<div class="vstack title" style="text-align: center;">
 			<span style="font-size: 5em; text-align: center;"><a href="/" class="grotesk-head" style="text-decoration: none; color: white;">The Kyanet</a></span>
-			<span class="dm-foot" style="color: gray; font-weight: 500;">私について知っておくべきこと</span>
+			<span class="dm-foot" style="color: gray; font-weight: 500;">私の冒険記録</span>
 		</div>
 		<h1 id="title">{record.title}</h1>
 		<div class="content center">
