Bsky handle provider system and subdomain recognition and homepage redesign

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -17,7 +17,7 @@ const identity = {
 };
 
 import KFooter from "../components/KFooter.astro";
-import "../styles/global.css";
+import "../styles/main.css";
 ---
 <html lang="en">
 	<head>
