--- a/src/components/KFooter.astro
+++ b/src/components/KFooter.astro
@@ -7,6 +7,6 @@ interface Props {
 const { page, color } = Astro.props;
 ---
 <div class="kfooter" style=`left: 0px; right: 0px; background-color: ${color}; padding: 20px 20px; display: flex; justify-content: space-between; gap: 2em;margin-top: auto;`>
-    <sub style="color: #A6A6A6; text-align: left; font-weight: light;">Copyright © 2024-2025 Kyanoxia, All Rights Reserved</sub>
+    <sub style="color: #A6A6A6; text-align: left; font-weight: light;">Copyright © Kyanoxia 2024 - {new Date().getUTCFullYear()}</sub>
     <sub style="color: #A6A6A6; text-align: right; font-weight: light;">{page}</sub>
 </div>
