--- a/src/pages/traumadumping.astro
+++ b/src/pages/traumadumping.astro
@@ -1,87 +1,44 @@
 ---
 export const prerender = false;
 
-const pageTitle = "On Trauma Dumping...";
-const pageDescription = "Trauma dumping is a hostile behavior that can hurt anyone involved...";
-const pageImage = "img/kyanet-logo.png";
-const pageColor = "#1b1b1b";
-
-const identity = {
-	name: "Kyanoxia Rivera",
-	country: "United States",
-	nickname: "Kya",
-	pronouns: "she/her",
-	race: "Human Fox Hybrid",
-	occupation: "Graphic Designer",
-	iteration: 0
+const props = {
+	siteName: "The Kyanet",
+	title: "Trauma Dumping",
+	description: "Trauma dumping is a harmful activity for everyone involved...",
+	favicon: "svg/favicon.svg",
+	image: "svg/favicon.svg",
+	color: "#FFFFFF"
 };
 
-import KFooter from "../components/KFooter.astro";
-import "../styles/global.css";
+import Layout from "../layouts/Layout.astro";
+import "../styles/traumadumping.css";
 ---
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="svg/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		
-		<meta property="og:site_name" content="The Kyanet" />
-		<meta property="og:title" content=`${pageTitle}` />
-		<meta property="og:description" content=`${pageDescription}` />
-		<meta property="og:image" content=`${pageImage}` />
+<Layout props={props}>
+	<div class="vstack center" style="text-align: center; max-width: 80ch;">
+		<h1 class="grotesk-head" style="margin-top: 50px;">{props.title}</h1>
+		<h2 style="font-weight: 400; color: gray;">Unless otherwise specified, <span style="font-style: italic; text-decoration: underline; text-transform: uppercase;">don't do it!</span></h2>
+		<ul style="text-align: left; display: flex; flex-direction: column; gap: 1em; font-weight: 300; max-width: 60ch;">
+			<li>Trauma dumping is defined as unloading traumatic experiences on others without warning or invitation.</li>
+			<li>It can damage relationships and lead to anxiety, depression, and other mental health conditions.</li>
+		</ul>
+		<p style="font-weight: 300; color: gray; margin-bottom: 50px; max-width: 60ch;">In short, unless I know you well and it's both clear we are comfortable with each other, I don't want to hear about your problems.</p>
+		<p style="text-align: left; line-height: 1.5; text-indent: 4ch;">If you do start trauma dumping on me, in DMs or otherwise, and I do not like it, I am going to tell you. I've come into contact with a couple communities in which nobody talks simply because someone is constantly trauma dumping in community spaces. If you need help, please use the resources at the bottom of this page.</p>
+	
+		<div class="spacer"></div>
 
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="The Kyanet" />
-		<meta name="twitter:title" content=`${pageTitle}` />
-		<meta name="twitter:description" content=`${pageDescription}` />
-		<meta name="twitter:url" content=`https://kyanoxia.com/`>
-		<meta name="twitter:image" content=`${pageImage}` />
-
-		<meta itemprop="name" content=`${pageTitle}` />
-		<meta itemprop="description" content=`${pageDescription}` />
-		<meta itemprop="image" content=`${pageImage}` />
-
-		<meta name="name" content=`${pageTitle}` />
-		<meta name="description" content=`${pageDescription}` />
-		<meta name="image" content=`${pageImage}` />
-
-		<meta name="theme-color" content=`${pageColor}` />
-
-		<title>{pageTitle}</title>
-
-		<link rel="sitemap" href="/sitemap-index.xml" />
-
-		<script is:inline src="https://kit.fontawesome.com/6a9ec12e2e.js" crossorigin="anonymous"></script>
-	</head>
-	<body style="background-color: #1b1b1b;">
-		<div class="content center" style="text-align: center; max-width: 80ch;">
-			<h1 style="margin-top: 50px;">{pageTitle}</h1>
-			<h2 style="font-weight: 400; color: gray;">Unless otherwise specified, <span style="font-style: italic; text-decoration: underline; text-transform: uppercase;">don't do it!</span></h2>
-			<ul style="text-align: left; display: flex; flex-direction: column; gap: 1em; font-weight: 300; max-width: 60ch;">
-				<li>Trauma dumping is defined as unloading traumatic experiences on others without warning or invitation.</li>
-				<li>It can damage relationships and lead to anxiety, depression, and other mental health conditions.</li>
-			</ul>
-			<p style="font-weight: 300; color: gray; margin-bottom: 50px; max-width: 60ch;">In short, unless I know you well and it's both clear we are comfortable with each other, I don't want to hear about your problems.</p>
-			<p style="text-align: left; line-height: 1.5; text-indent: 4ch;">If you do start trauma dumping on me, in DMs or otherwise, and I do not like it, I am going to tell you. I've come into contact with a couple communities in which nobody talks simply because someone is constantly trauma dumping in community spaces. If you need help, please use the resources at the bottom of this page.</p>
-		
-			<div class="spacer"></div>
-
-			<div class="crisis" style="margin-bottom: 10px;">
-				<a class="crisis-help" href='https://988lifeline.org/'>
-					<i class="fa-solid fa-phone"></i>
-					<span>Lifeline 988</span>
-				</a>
-				<a class="crisis-help" href='https://www.crisistextline.org/'>
-					<i class="fa-solid fa-message"></i>
-					<span>Crisis Chat</span>
-				</a>
-				<a class="crisis-help" href='https://www.911.gov/'>
-					<i class="fa-solid fa-phone"></i>
-					<span>911</span>
-				</a>
-			</div>
+		<div class="crisis" style="margin-bottom: 10px;">
+			<a class="crisis-help" href='https://988lifeline.org/'>
+				<i class="fa-solid fa-phone"></i>
+				<span>Lifeline 988</span>
+			</a>
+			<a class="crisis-help" href='https://www.crisistextline.org/'>
+				<i class="fa-solid fa-message"></i>
+				<span>Crisis Chat</span>
+			</a>
+			<a class="crisis-help" href='https://www.911.gov/'>
+				<i class="fa-solid fa-phone"></i>
+				<span>911</span>
+			</a>
 		</div>
-		<KFooter page=`${pageTitle}` color="#1b1b1b" />
-	</body>
-</html>
+	</div>
+</Layout>
