--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,7 +35,7 @@
   font-style: italic;
 }
 
-.multiplexed{
+.multiplexed {
   font-family: multiplexed;
   text-transform: lowercase;
 }
@@ -72,36 +72,61 @@
   font-weight: 200;
 }
 
-html {
-  font-family: sans-serif;
-  color: white;
-  height: 100dvh;
-}
-  
-body {
-  margin: 0;
-  padding-bottom: 15px;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  min-height: 100dvh;
-}
-
-footer {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-}
-
 * {
-  font-family: 'General Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+
+  box-sizing: border-box;
+}
+
+.inline-link {
+  color: black;
+  text-decoration: underline;
+
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+}
+
+.inline-link::after {
+  content: '';
+  position: absolute;
+  display: block;
+
+  width: 0;
+  height: 2px;
+
+  background-color: black;
+
+  left: 0;
+  bottom: -1px;
+
+  transition: all 200ms ease;
+}
+
+.inline-link::before {
+  content: '';
+  position: absolute;
+  display: block;
+
+  width: 100%;
+  height: 1px;
+
+  background-color: white;
+
+  left: 0;
+  bottom: -2px;
+
+  transition: all 200ms ease;
+}
+
+a:hover::after {
+  width: 100%;
 }
 
 h1 {
@@ -117,17 +142,29 @@ h2 {
   margin: 25px 0;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  position: relative;
-  margin: 0px 1em;
+.centerx {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.center {
+.centery {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.center-content {
+  justify-content: center;
   align-items: center;
-  align-self: center;
+}
+
+.x-pad {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.y-pad {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .header-img {
@@ -147,6 +184,10 @@ h2 {
 
 .banner {
   aspect-ratio: 17 / 6;
+}
+
+.read {
+  max-width: 80ch;
 }
 
 .socials {
@@ -169,7 +210,7 @@ h2 {
   gap: 2em;
   cursor: pointer;
   transition: all 500ms ease;
-  flex:  1 1 50px;
+  flex: 1 1 50px;
   border-radius: 10px;
 }
 
@@ -177,7 +218,7 @@ h2 {
   background-color: #1b1b1b;
 }
 
-.social-card > i {
+.social-card>i {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -192,77 +233,6 @@ h2 {
   align-items: center;
 }
 
-.calendar {
-  width: 80ch;
-  align-self: center;
-  display: flex;
-  flex-direction: column;
-  border-radius: 20px;
-  border: 2px solid #2b2b2b;
-  overflow: hidden;
-  gap: 5px;
-}
-
-.cal-entry {
-  width: 100%;
-  height: 150px;
-  display: flex;
-  justify-content: space-between;
-  background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.75));
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-  padding: 0px 25px;
-}
-
-.cal-img {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  z-index: -1;
-}
-
-.cal-entry > p {
-  font-family: grotesk;
-  font-weight: bold;
-  font-style: italic;
-  font-size: 2em;
-  text-shadow: 0px 0px 10px black;
-}
-
-.cal-entry > span {
-  font-family: 'DM Sans';
-  font-weight: 300;
-  font-size: 2em;
-  font-style: italic;
-  text-shadow: 0px 0px 10px black;
-}
-
-.crisis {
-  display: flex;
-  align-self: center;
-  gap: 5px;
-  flex-flow: row wrap;
-  justify-content: center;
-}
-
-.crisis-help {
-  background-color: #2b2b2b;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15px;
-  padding: 15px 25px;
-  justify-content: space-around;
-  border-radius: 7px;
-  text-decoration: none;
-  color: white;
-  min-width: 0;
-  flex:  1 1 100px;
-  white-space: nowrap;
-  width: 100px;
-}
-
 .orchidlogo {
   max-width: 100%;
 }
@@ -270,13 +240,11 @@ h2 {
 .vstack {
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 .hstack {
   display: flex;
   flex-direction: row;
-  width: 100%;
 }
 
 .description {
