--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,5 +98,5 @@ const socials = {
 	<div class="spacer"></div>
 	<div class="spacer"></div>
 
-	<script src="./src/pages/scripts/index.js" type="module"/>
+	<script is:inline src="./src/pages/scripts/index.js" type="module"/>
 </Layout>
